PR/51040: Abhinav Upadhyay: Fix memory leak